[Add] Webgl script context.

--- a/index.html
+++ b/index.html
@@ -3,4 +3,8 @@
     <head>
         <title>VokeGpu</title>
     </head>
+    <body>
+        <canvas id = "webgl-context"></canvas>
+        <script src = "visual/webglcontext.js"></script>
+    </body>
 </html>
