Should I do commits all the time?

--- a/index.html
+++ b/index.html
@@ -2,9 +2,10 @@
 <html>
     <head>
         <title>VokeGpu</title>
+        <link rel = "viewport" href = "style/viewport.css">
     </head>
     <body>
         <canvas id = "webgl-context"></canvas>
-        <script src = "visual/webglcontext.js"></script>
+        <script src = "scripts/webglcontext.js"></script>
     </body>
 </html>
