[Add] Buffering tool & mainloop

--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html>
     <head>
         <title>VokeGpu</title>
-        <link rel = "viewport" href = "style/viewport.css">
+        <meta name = "viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href = "style/viewport.css"
     </head>
     <body>
         <canvas id = "webgl-context"></canvas>
