[Update-Fix] added libs & syntax

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     </head>
     <body>
         <canvas id = "webgl-context"></canvas>
+        <script src = "libs/gl-matrix.js"></script>
         <script src = "scripts/webglcontext.js"></script>
     </body>
 </html>
