[Fix] Font rendering

--- a/index.html
+++ b/index.html
@@ -2,12 +2,14 @@
 <html>
     <head>
         <title>VokeGpu</title>
-        <meta name = "viewport" content="width=device-width, initial-scale=1.0">
+        <meta name = "viewport" content = "width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href = "style/viewport.css"
+        <link rel="stylesheet" href="assets/JetBrainsMono-Bold.ttf">
     </head>
     <body>
         <canvas id = "webgl-context"></canvas>
         <script src = "libs/gl-matrix.js"></script>
+        <script  src = "https://cdn.jsdelivr.net/npm/opentype.js"></script>
         <script src = "scripts/webglcontext.js"></script>
     </body>
 </html>
