Batch system & program shading working.

--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
     <body>
         <canvas id = "webgl-context"></canvas>
         <script src = "libs/gl-matrix.js"></script>
-        <script  src = "https://cdn.jsdelivr.net/npm/opentype.js"></script>
+        <script src = "https://cdn.jsdelivr.net/npm/opentype.js"></script>
+        <script src = "scripts/gputools.js"></script>
         <script src = "scripts/webglcontext.js"></script>
     </body>
 </html>
