[Update] Font rendering & UI manager system.
dog dog and cats

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
         <script src = "libs/gl-matrix.js"></script>
         <script src = "https://cdn.jsdelivr.net/npm/opentype.js"></script>
         <script src = "scripts/gputools.js"></script>
+        <script src = "scripts/ui.js"></script>
         <script src = "scripts/webglcontext.js"></script>
     </body>
 </html>
